# ab_test

./: 01_the_machine_learning_landscape.ipynb  ab_test.ipynb  assignment.ipynb  crash.ipynb  daily.csv  daily_orders.csv  dailyorders_1.csv  f1.ipynb  forecast_prediction.csv  google.ipynb  hands_on_oreilly_3rd.ipynb  house_prediction.ipynb  main.py  oreilly_ch4.ipynb  pyproject.toml  talabat.ipynb
