[project]
name = "crashcoursegoogle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "category-encoders>=2.8.1",
    "fastf1>=3.6.1",
    "google-ml-edu>=0.1.3",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pingouin>=0.5.5",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.4",
]
